--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,8 @@ rvm:
 - 2.2.7
 - 2.1.10
 
+before_install:
+  - git clone https://github.com/ONLYOFFICE/api.onlyoffice.com.git
+
 script:
   - bundle exec rspec
