--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ rvm:
 - 2.1.10
 
 before_install:
-  - git clone https://github.com/ONLYOFFICE/api.onlyoffice.com.git
+  - mkdir ~/sources
+  - git clone https://github.com/ONLYOFFICE/api.onlyoffice.com.git ~/sources/api.onlyoffice.com
 
 script:
   - bundle exec rspec
