Fix travis - working version (#2)
* Fix travis - working version

* Add cloning api.onlyoffice.com

* Change path for cloning api.onlyoffice.com

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,9 @@ rvm:
 - 2.2.7
 - 2.1.10
 
+before_install:
+  - mkdir ~/sources
+  - git clone https://github.com/ONLYOFFICE/api.onlyoffice.com.git ~/sources/api.onlyoffice.com
+
 script:
-  - rspec
+  - bundle exec rspec
