--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,2 +1,11 @@
-inherit_from:
-    - .rubocop_todo.yml
+inherit_from: .rubocop_todo.yml
+
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
+
