--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -34,3 +34,5 @@ jobs:
         gem install bundler
         bundle install --jobs 4 --retry 3
         bundle exec rspec
+    - name: Check `simplecov` result coverage
+      run: cat coverage/.last_run.json | jq '.result.covered_percent' | grep -q '100'
