--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -36,3 +36,5 @@ jobs:
         bundle exec rspec
     - name: Check `simplecov` result coverage
       run: cat coverage/.last_run.json | jq '.result.covered_percent' | grep -q '100'
+    - name: Check source files using `rubocop`
+      run: rubocop
